--- a/login.css
+++ b/login.css
@@ -2,7 +2,7 @@ body{
    margin: 0;
    padding: 0;
    font-family: 'Lora', serif;
-   background-color: black;
+   background-color: green;
 }
 main{
     display: flex;
